Bug 1391154 - Handle edge cases around the borders of IntersectionObservers more consistently. r=dholbert

The old code would ignore mThresholds if we happened to update when the
observed element was edge-adjacent to its root. This could cause spurious
notifications if it happened to run during a CSS transformation. The new code
more closely follows the spec with a slight deviation where the code treats
all values less than the smallest passed-in threshold as equivalent (when
looking at previousIndex). This matches Chrome's implementation and the tests.

MozReview-Commit-ID: 7oAh1EdjMiY